--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Display</title>
+    <title>BPM Finder Welcome Guide</title>
+    <style>
+        body {
+            font-family: Verdana, sans-serif;
+            background-color: #4A54E2;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .header {
+            background-color: #fff;
+            padding: 10px;
+            text-align: center;
+            box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            font-size: 32pt;
+        }
+        .instructions {
+            background-color: #f0f0f0;
+            margin-top: 20px;
+            padding: 20px;
+            font-size: 20pt;
+            max-width: 900px;
+            box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
+        .step {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        img {
+            max-width: 900px;
+            width: auto;
+            height: auto;
+            display: block;
+            margin-top: 10px;
+            box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+        }
+        .bold {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <img src="images/image1.png" alt="Steps Image 1">
-    <img src="images/image2.png" alt="Steps Image 2">
+    <div class="header">Clipboard History has been successfully installed!</div>
+    <div class="instructions">
+        <div class="step">
+            <span class="bold">Click the puzzle piece (1)</span> in the top right of your browser. Then, <span class="bold">click the little pin (2)</span> next to the extension:
+            <img src="images/image1.png" alt="Steps Image 1">
+        </div>
+        <div class="step">
+            <span class="bold">Open the extension (3)</span> on any page to view and manage your clipboard history:
+            <img src="images/image2.png" alt="Steps Image 2">
+        </div>
+        <div class="step">The extension will keep track of all of your clipboard operations <span class="bold">automatically</span> — you just have to have Chrome open</div>
+    </div>
 </body>
 </html>
