--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     </style>
 </head>
 <body>
-    <div class="header">Clipboard History has been successfully installed!</div>
+    <div class="header">Clipboard History has been installed successfully!</div>
     <div class="instructions">
         <div class="step">
-            <span class="bold">Click the puzzle piece (1)</span> in the top right of your browser. Then, <span class="bold">click the little pin (2)</span> next to the extension:
+            <span class="bold">Click the puzzle piece icon (1)</span> in the top right corner of your browser. Then, <span class="bold">click the small pin icon (2)</span> next to the extension:
             <img src="images/image1.png" alt="Steps Image 1">
         </div>
         <div class="step">
             <span class="bold">Open the extension (3)</span> on any page to view and manage your clipboard history:
             <img src="images/image2.png" alt="Steps Image 2">
         </div>
-        <div class="step">The extension will keep track of all of your clipboard operations <span class="bold">automatically</span> — you just have to have Chrome open</div>
+        <div class="step">The extension will automatically keep track of all your clipboard operations — you just need to have Chrome open.</div>
     </div>
 </body>
 </html>
