--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Clipboard History Welcome Guide</title>
     <style>
         body {
-            font-family: Verdana, sans-serif;
+            font-family: Roboto, sans-serif;
             background-color: #4A54E2;
             margin: 0;
             padding: 20px;
@@ -16,11 +16,12 @@
             align-items: center;
         }
         .header {
-            background-color: #fff;
-            padding: 10px;
+            background-color: #4A54E2;
+            padding: 20px;
             text-align: center;
-            box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            color: white;
             font-size: 32pt;
+            font-weight: 900;
         }
         .instructions {
             background-color: #f0f0f0;
