--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
             font-weight: 900;
         }
         .instructions {
-            background-color: #f0f0f0;
-            margin-top: 20px;
-            padding: 20px;
+            background-color: #ffffff;
+            padding: 40px 20px;
             font-size: 20pt;
             max-width: 900px;
             box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         }
         .step {
-            margin-bottom: 20px;
             text-align: center;
         }
         img {
@@ -41,7 +39,6 @@
             height: auto;
             display: block;
             margin-top: 10px;
-            box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
         }
         .bold {
             font-weight: bold;
@@ -53,11 +50,11 @@
     <div class="instructions">
         <div class="step">
             <span class="bold">Click the puzzle piece icon (1)</span> in the top right corner of your browser. Then, <span class="bold">click the small pin icon (2)</span> next to the extension:
-            <img src="images/image1.png" alt="Steps Image 1">
+            <img src="images/Web_Screen1.png" alt="Steps Image 1">
         </div>
         <div class="step">
             <span class="bold">Open the extension (3)</span> on any page to view and manage your clipboard history:
-            <img src="images/image2.png" alt="Steps Image 2">
+            <img src="images/Web_Screen2.png" alt="Steps Image 2">
         </div>
         <div class="step">The extension will automatically keep track of all your clipboard operations — you just need to have Chrome open.</div>
     </div>
